--- a/resume-project/css/style.css
+++ b/resume-project/css/style.css
@@ -18,10 +18,11 @@ body {
 header {
 	height: 40vh;
 	width: 100vw;
-	background-image: url("../img/singapore-1990959_1920.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
+	background-image: url(https://ninjasfiles.s3.amazonaws.com/asset_0000000000000020_1549743985_macbook_mouse.jpg);
 	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	position: relative;
 }
 
 .horizontal-list {
@@ -49,8 +50,24 @@ header {
 	text-align: center;
 }
 
-@media (min-width: 200px) {
-	nav {
-		display: none;
-	}
+.social_media_icon {
+	height: 20px;
+	width: 20px;
+}
+
+.social-media-nav {
+	position: absolute;
+	top: 70%;
+	left: 50%;
+	transform: translate(-50%, 50%);
+}
+
+h1 {
+	color: white;
+	letter-spacing: 3px;
+	font-size: 4rem;
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, 50%);
 }
